Successfull implementation of first endpoint.
