# src/main/java/com/example/mortgageservice/controller/dto/Amount.java
@@ -4,75 +4,38 @@ import com.fasterxml.jackson.annotation.JsonProperty;
 import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.annotation.Generated;
 import jakarta.validation.constraints.NotNull;
-import jakarta.validation.constraints.Pattern;
+import jakarta.validation.constraints.Positive;
+import lombok.Getter;
+import lombok.Setter;
 
+import java.math.BigDecimal;
 import java.util.Objects;
 
 /**
  * Monetary amount with currency
  */
 
+@Setter
+@Getter
 @Schema(name = "Amount", description = "Monetary amount with currency")
 @Generated(value = "org.openapitools.codegen.languages.SpringCodegen", date = "2025-10-13T17:12:32.542554800+05:30[Asia/Calcutta]", comments = "Generator version: 7.7.0")
 public class Amount {
 
-  private Double value;
+  @Positive private BigDecimal value;
 
-  private String currency;
-
-  public Amount() {
-    super();
-  }
-
-  /**
+    /**
    * Constructor with only required parameters
    */
-  public Amount(Double value, String currency) {
+  public Amount(BigDecimal value) {
     this.value = value;
-    this.currency = currency;
   }
 
-  public Amount value(Double value) {
+  public Amount value(BigDecimal value) {
     this.value = value;
     return this;
   }
 
-  /**
-   * Get value
-   * @return value
-   */
-  @NotNull 
-  @Schema(name = "value", example = "2500.0", requiredMode = Schema.RequiredMode.REQUIRED)
-  @JsonProperty("value")
-  public Double getValue() {
-    return value;
-  }
-
-  public void setValue(Double value) {
-    this.value = value;
-  }
-
-  public Amount currency(String currency) {
-    this.currency = currency;
-    return this;
-  }
-
-  /**
-   * ISO 4217 currency code
-   * @return currency
-   */
-  @NotNull @Pattern(regexp = "^[A-Z]{3}$") 
-  @Schema(name = "currency", example = "USD", description = "ISO 4217 currency code", requiredMode = Schema.RequiredMode.REQUIRED)
-  @JsonProperty("currency")
-  public String getCurrency() {
-    return currency;
-  }
-
-  public void setCurrency(String currency) {
-    this.currency = currency;
-  }
-
-  @Override
+    @Override
   public boolean equals(Object o) {
     if (this == o) {
       return true;
@@ -81,13 +44,12 @@ public class Amount {
       return false;
     }
     Amount amount = (Amount) o;
-    return Objects.equals(this.value, amount.value) &&
-        Objects.equals(this.currency, amount.currency);
+    return Objects.equals(this.value, amount.value);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(value, currency);
+    return Objects.hash(value);
   }
 
   @Override
@@ -95,7 +57,6 @@ public class Amount {
     StringBuilder sb = new StringBuilder();
     sb.append("class Amount {\n");
     sb.append("    value: ").append(toIndentedString(value)).append("\n");
-    sb.append("    currency: ").append(toIndentedString(currency)).append("\n");
     sb.append("}");
     return sb.toString();
   }
